# ml-practice-time

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_keywords.py
chatbots/: answers_chatbot_gradio_gpt.py  answers_chatbot_gradio_rules.py  chatbot_fastapi.py  chatbot_fastapi_ui.py  chatbot_gradio.py  chatbot_streamlit.py  index.html
keywords/: answers_keywords.ipynb  keywords.ipynb  news_articles.json
