[tool.poetry]
name = "ml-practice-time"
version = "0.1.0"
description = "Tasks and code snippets for ML workshops"
authors = ["Yaroslav Kopotilov <datascience@tuta.io>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
pandas = "^2.2.2"
tenacity = "^8.5.0"
openai = "^1.36.1"
spacy = "^3.7.5"
streamlit = "^1.36.0"
gradio = "^4.38.1"
matplotlib = "^3.9.1"
ipykernel = "^6.29.5"
langchain-core = "^0.2.22"
langchain-community = "^0.2.9"
langchain-openai = "^0.1.17"
litellm = "^1.41.25"
pytextrank = "^3.3.0"
keybert = "^0.8.5"
spacy-transformers = "^1.3.5"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
mypy = "^1.11.0"
pytest = "^8.3.2"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
